--- a/a-la-française.html
+++ b/a-la-française.html
@@ -11,13 +11,9 @@
 
 <body>
     <header>
-        <div>
-            <a href="index.html"><i class="fas fa-arrow-left"></i></a>
-        </div>
-        <div class="logo">
-        <img src="public/img/logo.png" alt="Ohmyfood"/>
+        <a href="index.html"><i class="fas fa-arrow-left"></i></a>
+        <img src="public/img/logo.png" alt="Ohmyfood" class="logo"/>
         <h1 hidden> Ohmyfood , réservez votre menu avant votre venue</h1>
-        </div>
     </header>
 
     <main>
@@ -31,123 +27,124 @@
                 <i class="fas fa-heart hover-icon"></i>
                 </div>
             </div>
-            <section class="menu__entrees">
-                <div class="menu__subtitle"><h3>entrées</h3></div>
-                <div class="menustep">
-                    <div class="menu__choice">
-                        <h4>Tartare de poulpe acidulé</h4>
-                        <p>Aux zestes d'orange</p>
+            <div class="menu__contains">
+                <section class="menu__entrees">
+                    <div class="menu__subtitle"><h3>entrées</h3>
                     </div>
-                    <div class="menu__price"><p>25€</p></div>                                   
-                    <div class="check">
-                        <i class="fas fa-check-circle"></i>                                                       
-                    </div>    
-                </div>
-                <div class="menustep">
-                    <div class="menu__choice">
-                        <h4>Velouté de légumes d'antan</h4>
-                        <p>Carotte, panais, topinambour</p>
+                    <div class="menustep">
+                        <div class="menu__choice">
+                            <h4>Tartare de poulpe acidulé</h4>
+                            <p>Aux zestes d'orange</p>
+                        </div>
+                        <div class="menu__price"><p>25€</p></div>                                   
+                        <div class="check">
+                            <i class="fas fa-check-circle"></i>                                                       
+                        </div>    
                     </div>
-                    <div class="menu__price"><p>35€</p></div>
-                    <div class="check">
-                   <i class="fas fa-check-circle"></i>
+                    <div class="menustep">
+                        <div class="menu__choice">
+                            <h4>Velouté de légumes d'antan</h4>
+                            <p>Carotte, panais, topinambour</p>
+                        </div>
+                        <div class="menu__price"><p>35€</p></div>
+                        <div class="check">
+                    <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
-                </div>
-                <div class="menustep">
-                    <div class="menu__choice">
-                        <h4>Soupe à l'oignon</h4>
-                        <p >Revisitée</p>
-                    </div>
-                    <div class="menu__price"><p>20€</p> 
-                    </div>
-                    <div class="check">
-                      <i class="fas fa-check-circle"></i>
-                    </div>
-                </div>
-            </section>
-
-
-            <section class="menu__plats">
-                <div class="menu__subtitle"> <h3>plats</h3></div>
-                <div class="menustep">
-                    <div class="menu__choice">
-                        <h4>Coquilles Saint-Jacques</h4> 
-                        <p>Accompagnées d'une purée de panais</p>
-                    </div>
-                    <div class="menu__price"><p>40€</p></div> 
-                    <div class="check">
-                         <i class="fas fa-check-circle"></i>
-                    </div>
-                </div>
-                <div class="menustep">
-                    <div class="menu__choice">
-                        <h4>Magret de canard</h4>
-                        <p>Et parmentier de pommes de terre</p>
-                    </div>
-                    <div class="menu__price"><p>35€</p></div>
-                    <div class="check">
+                    <div class="menustep">
+                        <div class="menu__choice">
+                            <h4>Soupe à l'oignon</h4>
+                            <p >Revisitée</p>
+                        </div>
+                        <div class="menu__price"><p>20€</p> 
+                        </div>
+                        <div class="check">
                         <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
-                </div>
-                <div class="menustep">
-                    <div class="menu__choice">
-                        <h4>Pigeonneau d’Ille-et-Vilaine </h4>
-                        <p>Sur son lit de gnocchis aux légumes</p>
+                </section>
+                <section class="menu__plats">
+                    <div class="menu__subtitle"> <h3>plats</h3>
                     </div>
-                    <div class="menu__price"><p>44€</p></div>
-                    <div class="check">
-                      <i class="fas fa-check-circle"></i>
-                    </div>               
-                </div>
-            </section>
-
-            <section class="menu__desserts">
-                <div class="menu__subtitle"><h3>desserts</h3></div>
-                <div class="menustep">
-                    <div class="menu__choice">
-                        <h4>Pétales de violettes glacés</h4>
-                        <p>Et purée de noisettes</p>   
+                    <div class="menustep">
+                        <div class="menu__choice">
+                            <h4>Coquilles Saint-Jacques</h4> 
+                            <p>Accompagnées d'une purée de panais</p>
+                        </div>
+                        <div class="menu__price"><p>40€</p></div> 
+                        <div class="check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
-                    <div class="menu__price"><p>18€</p></div>
-                    <div class="check">
+                    <div class="menustep">
+                        <div class="menu__choice">
+                            <h4>Magret de canard</h4>
+                            <p>Et parmentier de pommes de terre</p>
+                        </div>
+                        <div class="menu__price"><p>35€</p></div>
+                        <div class="check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
+                    </div>
+                    <div class="menustep">
+                        <div class="menu__choice">
+                            <h4>Pigeonneau d’Ille-et-Vilaine </h4>
+                            <p>Sur son lit de gnocchis aux légumes</p>
+                        </div>
+                        <div class="menu__price"><p>44€</p></div>
+                        <div class="check">
                         <i class="fas fa-check-circle"></i>
-                    </div>                          
-                </div>
-                <div class="menustep">
-                    <div class="menu__choice">
-                        <h4>Fondant au chocolat</h4>
-                        <p>Revisité</p>
+                        </div>               
                     </div>
-                    <div class="menu__price"><p>22€</p></div>
-                    <div class="check">
-                     <i class="fas fa-check-circle"></i>
-                    </div>                          
-                </div>                             
-                <div class="menustep">
-                    <div class="menu__choice">
-                        <h4>Millefeuille croustillant</h4>
-                        <p>Myrtilles et pâte d’amande</p>
+                </section>
+                <section class="menu__desserts">
+                    <div class="menu__subtitle"><h3>desserts</h3>
                     </div>
-                    <div class="menu__price"><p>23€</p></div>                              
-                    <div class="check">
-                     <i class="fas fa-check-circle"></i>
-                    </div> 
-                </div>
-            </section>
+                    <div class="menustep">
+                        <div class="menu__choice">
+                            <h4>Pétales de violettes glacés</h4>
+                            <p>Et purée de noisettes</p>   
+                        </div>
+                        <div class="menu__price"><p>18€</p></div>
+                        <div class="check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>                          
+                    </div>
+                    <div class="menustep">
+                        <div class="menu__choice">
+                            <h4>Fondant au chocolat</h4>
+                            <p>Revisité</p>
+                        </div>
+                        <div class="menu__price"><p>22€</p></div>
+                        <div class="check">
+                        <i class="fas fa-check-circle"></i>
+                        </div>                          
+                    </div>                             
+                    <div class="menustep">
+                        <div class="menu__choice">
+                            <h4>Millefeuille croustillant</h4>
+                            <p>Myrtilles et pâte d’amande</p>
+                        </div>
+                        <div class="menu__price"><p>23€</p></div>                              
+                        <div class="check">
+                        <i class="fas fa-check-circle"></i>
+                        </div> 
+                    </div>
+                </section>
+            </div>
+        </section>
+        
         <section class="command"> 
             <a href="" class="colorbtn">Commander </a>
         </section>
-    </section>
     </main>
 
     <footer>
-<h2> ohmyfood</h2>
-<p>
-<i class="fas fa-utensils"></i>Proposer un restaurant <br/>
-<i class="fas fa-hands-helping"></i>Devenir partenaire <br/>
-Mentions légales <br/>
-<a href="#">Contact</a>
-</p>
+        <h2 class="name">ohmyfood</h2>
+        <p><i class="fas fa-utensils"></i><a href="#">Proposer un restaurant</a></p> 
+        <p><i class="fas fa-hands-helping"></i><a href="#">Devenir partenaire</a></p> 
+        <p><a href="#">Mentions légales</a></p> 
+        <p><a href="#">Contact</a></p>
     </footer>
 
 
