--- a/la-note-enchantee.html
+++ b/la-note-enchantee.html
@@ -11,13 +11,10 @@
 
 <body>
     <header>
-        <div>
-            <a href="index.html"><i class="fas fa-arrow-left"></i></a>
-        </div>
-        <div class="logo">
-        <img src="public/img/logo.png" alt="Ohmyfood"/>
+        <a href="index.html"><i class="fas fa-arrow-left"></i></a>
+        <img src="public/img/logo.png" alt="Ohmyfood" class="logo"/>
         <h1 hidden> Ohmyfood , réservez votre menu avant votre venue</h1>
-        </div>
+       
     </header>
 
     <main>
@@ -32,135 +29,137 @@
                 <i class="fas fa-heart hover-icon"></i>
                 </div>
             </div>
-            <section class="menu__entrees">
-                <div class="menu__subtitle"><h3>entrées</h3></div>
-                <div class="menustep">
-                    <div class="menu__choice">
-                        <h4>Ravioles de foie gras</h4>
-                        <p>Accompagnés de leur crème à la truffe</p>
+            <div class="menu__contains">
+                <section class="menu__entrees">
+                    <div class="menu__subtitle"><h3>entrées</h3>
                     </div>
-                    <div class="menu__price"><p>25€</p></div>                                   
-                    <div class="check">
+                    <div class="menustep">
+                        <div class="menu__choice">
+                            <h4>Ravioles de foie gras</h4>
+                            <p>Accompagnés de leur crème à la truffe</p>
+                        </div>
+                        <div class="menu__price"><p>25€</p></div>                                   
+                        <div class="check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>     
+                    </div>
+                    <div class="menustep">
+                        <div class="menu__choice">
+                            <h4>Caviar osciètre</h4>
+                            <p>Sur blini à la farine de blé noir</p>
+                        </div>
+                        <div class="menu__price"><p>35€</p></div>
+                        <div class="check">
+                    <i class="fas fa-check-circle"></i>
+                        </div>
+                    </div>
+                    <div class="menustep">
+                        <div class="menu__choice">
+                            <h4>Homard et espuma de potiron</h4>
+                            <p >Mariné aux zestes d'orange</p>
+                        </div>
+                        <div class="menu__price"><p>20€</p> 
+                        </div>
+                        <div class="check">
                         <i class="fas fa-check-circle"></i>
-                    </div>     
-                </div>
-                <div class="menustep">
-                    <div class="menu__choice">
-                        <h4>Caviar osciètre</h4>
-                        <p>Sur blini à la farine de blé noir</p>
+                        </div>
                     </div>
-                    <div class="menu__price"><p>35€</p></div>
-                    <div class="check">
-                   <i class="fas fa-check-circle"></i>
-                    </div>
-                </div>
-                <div class="menustep">
-                    <div class="menu__choice">
-                        <h4>Homard et espuma de potiron</h4>
-                        <p >Mariné aux zestes d'orange</p>
-                    </div>
-                    <div class="menu__price"><p>20€</p> 
-                    </div>
-                    <div class="check">
-                      <i class="fas fa-check-circle"></i>
-                    </div>
-                </div>
-                <div class="menustep">
-                    <div class="menu__choice">
-                        <h4>Foie gras de canard cuit entier</h4>
-                        <p >Confiture de figue et pain toasté</p>
-                    </div>
-                    <div class="menu__price"><p>35€</p> 
-                    </div>
-                    <div class="check">
-                      <i class="fas fa-check-circle"></i>
-                    </div>
-                </div>
-            </section>
-
-
-            <section class="menu__plats">
-                <div class="menu__subtitle"> <h3>plats</h3></div>
-                <div class="menustep">
-                    <div class="menu__choice">
-                        <h4>Noix de coquilles Saint-Jacques</h4> 
-                        <p>Sur lit de purée de céleri-rave</p>
-                    </div>
-                    <div class="menu__price"><p>40€</p></div> 
-                    <div class="check">
-                         <i class="fas fa-check-circle"></i>
-                    </div>
-                </div>
-                <div class="menustep">
-                    <div class="menu__choice">
-                        <h4>Langoustine poêlée</h4>
-                        <p>Purée de patates douces</p>
-                    </div>
-                    <div class="menu__price"><p>35€</p></div>
-                    <div class="check">
+                    <div class="menustep">
+                        <div class="menu__choice">
+                            <h4>Foie gras de canard cuit entier</h4>
+                            <p >Confiture de figue et pain toasté</p>
+                        </div>
+                        <div class="menu__price"><p>35€</p> 
+                        </div>
+                        <div class="check">
                         <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
-                </div>
-                <div class="menustep">
-                    <div class="menu__choice">
-                        <h4>Mijoté de queue de boeuf </h4>
-                        <p>Et riz sauvage aux zestes de citron</p>
-                    </div>
-                    <div class="menu__price"><p>44€</p></div>
-                    <div class="check">
-                      <i class="fas fa-check-circle"></i>
-                    </div>               
-                </div>
-            </section>
+                </section>
 
-            <section class="menu__desserts">
-                <div class="menu__subtitle"><h3>desserts</h3></div>
-                <div class="menustep">
-                    <div class="menu__choice">
-                        <h4>Macaron noisette et chocolat</h4>
-                        <p>Glace au caramel brun et sel de Guérande</p>   
+                <section class="menu__plats">
+                    <div class="menu__subtitle"> <h3>plats</h3>
                     </div>
-                    <div class="menu__price"><p>18€</p></div>
-                    <div class="check">
+                    <div class="menustep">
+                        <div class="menu__choice">
+                            <h4>Noix de coquilles Saint-Jacques</h4> 
+                            <p>Sur lit de purée de céleri-rave</p>
+                        </div>
+                        <div class="menu__price"><p>40€</p></div> 
+                        <div class="check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
+                    </div>
+                    <div class="menustep">
+                        <div class="menu__choice">
+                            <h4>Langoustine poêlée</h4>
+                            <p>Purée de patates douces</p>
+                        </div>
+                        <div class="menu__price"><p>35€</p></div>
+                        <div class="check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
+                    </div>
+                    <div class="menustep">
+                        <div class="menu__choice">
+                            <h4>Mijoté de queue de boeuf </h4>
+                            <p>Et riz sauvage aux zestes de citron</p>
+                        </div>
+                        <div class="menu__price"><p>44€</p></div>
+                        <div class="check">
                         <i class="fas fa-check-circle"></i>
-                    </div>                          
-                </div>
-                <div class="menustep">
-                    <div class="menu__choice">
-                        <h4>Baba au rhum revisité</h4>
-                        <p>Avec son coulis de citron</p>
+                        </div>               
                     </div>
-                    <div class="menu__price"><p>22€</p></div>
-                    <div class="check">
-                     <i class="fas fa-check-circle"></i>
-                    </div>                          
-                </div>                             
-                <div class="menustep">
-                    <div class="menu__choice">
-                        <h4>Tarte au citron meringuée</h4>
-                        <p>Déstructurée</p>
+                </section>
+
+                <section class="menu__desserts">
+                    <div class="menu__subtitle"><h3>desserts</h3>
                     </div>
-                    <div class="menu__price"><p>23€</p></div>                              
-                    <div class="check">
-                     <i class="fas fa-check-circle"></i>
-                    </div> 
-                </div>
-            </section>
+                    <div class="menustep">
+                        <div class="menu__choice">
+                            <h4>Macaron noisette et chocolat</h4>
+                            <p>Glace au caramel brun et sel de Guérande</p>   
+                        </div>
+                        <div class="menu__price"><p>18€</p></div>
+                        <div class="check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>                          
+                    </div>
+                    <div class="menustep">
+                        <div class="menu__choice">
+                            <h4>Baba au rhum revisité</h4>
+                            <p>Avec son coulis de citron</p>
+                        </div>
+                        <div class="menu__price"><p>22€</p></div>
+                        <div class="check">
+                        <i class="fas fa-check-circle"></i>
+                        </div>                          
+                    </div>                             
+                    <div class="menustep">
+                        <div class="menu__choice">
+                            <h4>Tarte au citron meringuée</h4>
+                            <p>Déstructurée</p>
+                        </div>
+                        <div class="menu__price"><p>23€</p></div>                              
+                        <div class="check">
+                        <i class="fas fa-check-circle"></i>
+                        </div> 
+                    </div>
+                </section>
+            </div>
+        </section>
         <section class="command"> 
             <a href="" class="colorbtn">Commander </a>
         </section>
-    </section>
     </main>
 
-    <footer>
-<h2> ohmyfood</h2>
-<p>
-<i class="fas fa-utensils"></i>Proposer un restaurant <br/>
-<i class="fas fa-hands-helping"></i>Devenir partenaire <br/>
-Mentions légales <br/>
-<a href="#">Contact</a>
-</p>
-    </footer>
+        <footer>
+            <h2 class="name">ohmyfood</h2>
+            <p><i class="fas fa-utensils"></i><a href="#">Proposer un restaurant</a></p> 
+            <p><i class="fas fa-hands-helping"></i><a href="#">Devenir partenaire</a></p> 
+            <p><a href="#">Mentions légales</a></p> 
+            <p><a href="#">Contact</a></p>
+        </footer>
 
 
 </body>
