--- a/le-delice-des-sens.html
+++ b/le-delice-des-sens.html
@@ -11,13 +11,9 @@
 
 <body>
     <header>
-        <div>
-            <a href="index.html"><i class="fas fa-arrow-left"></i></a>
-        </div>
-        <div class="logo">
-        <img src="public/img/logo.png" alt="Ohmyfood"/>
+        <a href="index.html"><i class="fas fa-arrow-left"></i></a>
+        <img src="public/img/logo.png" alt="Ohmyfood" class="logo"/>
         <h1 hidden> Ohmyfood , réservez votre menu avant votre venue</h1>
-        </div>
     </header>
 
     <main>
@@ -31,123 +27,125 @@
                 <i class="fas fa-heart hover-icon"></i>
                 </div>
             </div>
-            <section class="menu__entrees">
-                <div class="menu__subtitle"><h3>entrées</h3></div>
-                <div class="menustep">
-                    <div class="menu__choice">
-                        <h4>Tartare de thon</h4>
-                        <p>Assaisonné au yuzu</p>
+            <div class="menu__contains">
+                <section class="menu__entrees">
+                    <div class="menu__subtitle"><h3>entrées</h3>
                     </div>
-                    <div class="menu__price"><p>25€</p></div>                                   
-                    <div class="check">
-                        <i class="fas fa-check-circle"></i>                                                      
-                    </div>     
-                </div>
-                <div class="menustep">
-                    <div class="menu__choice">
-                        <h4>Bouchée de homard croustillant </h4>
-                        <p>Et sa farandole de petits légumes</p>
+                    <div class="menustep">
+                        <div class="menu__choice">
+                            <h4>Tartare de thon</h4>
+                            <p>Assaisonné au yuzu</p>
+                        </div>
+                        <div class="menu__price"><p>25€</p></div>                                   
+                        <div class="check">
+                            <i class="fas fa-check-circle"></i>                                                      
+                        </div>     
                     </div>
-                    <div class="menu__price"><p>35€</p></div>
-                    <div class="check">
-                   <i class="fas fa-check-circle"></i>
+                    <div class="menustep">
+                        <div class="menu__choice">
+                            <h4>Bouchée de homard croustillant </h4>
+                            <p>Et sa farandole de petits légumes</p>
+                        </div>
+                        <div class="menu__price"><p>35€</p></div>
+                        <div class="check">
+                    <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
-                </div>
-                <div class="menustep">
-                    <div class="menu__choice">
-                        <h4>Velouté de cèpes </h4>
-                        <p >Aux truffes</p>
-                    </div>
-                    <div class="menu__price"><p>20€</p> 
-                    </div>
-                    <div class="check">
-                      <i class="fas fa-check-circle"></i>
-                    </div>
-                </div>
-            </section>
-
-
-            <section class="menu__plats">
-                <div class="menu__subtitle"> <h3>plats</h3></div>
-                <div class="menustep">
-                    <div class="menu__choice">
-                        <h4>Poulet rôti aux herbes de Provence</h4> 
-                        <p>Et sa crème de truffe</p>
-                    </div>
-                    <div class="menu__price"><p>40€</p></div> 
-                    <div class="check">
-                         <i class="fas fa-check-circle"></i>
-                    </div>
-                </div>
-                <div class="menustep">
-                    <div class="menu__choice">
-                        <h4>Langouste rôtie</h4>
-                        <p>Et ses légumes de saison</p>
-                    </div>
-                    <div class="menu__price"><p>35€</p></div>
-                    <div class="check">
+                    <div class="menustep">
+                        <div class="menu__choice">
+                            <h4>Velouté de cèpes </h4>
+                            <p >Aux truffes</p>
+                        </div>
+                        <div class="menu__price"><p>20€</p> 
+                        </div>
+                        <div class="check">
                         <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
-                </div>
-                <div class="menustep">
-                    <div class="menu__choice">
-                        <h4>Côte de boeuf Angus</h4>
-                        <p>Et sa purée de panais</p>
-                    </div>
-                    <div class="menu__price"><p>44€</p></div>
-                    <div class="check">
-                      <i class="fas fa-check-circle"></i>
-                    </div>               
-                </div>
-            </section>
+                </section>
 
-            <section class="menu__desserts">
-                <div class="menu__subtitle"><h3>desserts</h3></div>
-                <div class="menustep">
-                    <div class="menu__choice">
-                        <h4>Farandole de desserts</h4>
-                        <p>Du chef</p>   
+                <section class="menu__plats">
+                    <div class="menu__subtitle"> <h3>plats</h3>
                     </div>
-                    <div class="menu__price"><p>18€</p></div>
-                    <div class="check">
+                    <div class="menustep">
+                        <div class="menu__choice">
+                            <h4>Poulet rôti aux herbes de Provence</h4> 
+                            <p>Et sa crème de truffe</p>
+                        </div>
+                        <div class="menu__price"><p>40€</p></div> 
+                        <div class="check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
+                    </div>
+                    <div class="menustep">
+                        <div class="menu__choice">
+                            <h4>Langouste rôtie</h4>
+                            <p>Et ses légumes de saison</p>
+                        </div>
+                        <div class="menu__price"><p>35€</p></div>
+                        <div class="check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
+                    </div>
+                    <div class="menustep">
+                        <div class="menu__choice">
+                            <h4>Côte de boeuf Angus</h4>
+                            <p>Et sa purée de panais</p>
+                        </div>
+                        <div class="menu__price"><p>44€</p></div>
+                        <div class="check">
                         <i class="fas fa-check-circle"></i>
-                    </div>                          
-                </div>
-                <div class="menustep">
-                    <div class="menu__choice">
-                        <h4>Crème brulée</h4>
-                        <p>Revisitée</p>
+                        </div>               
                     </div>
-                    <div class="menu__price"><p>22€</p></div>
-                    <div class="check">
-                     <i class="fas fa-check-circle"></i>
-                    </div>                          
-                </div>                             
-                <div class="menustep">
-                    <div class="menu__choice">
-                        <h4>Tiramisu</h4>
-                        <p>À la noisette</p>
+                </section>
+
+                <section class="menu__desserts">
+                    <div class="menu__subtitle"><h3>desserts</h3>
                     </div>
-                    <div class="menu__price"><p>23€</p></div>                              
-                    <div class="check">
-                     <i class="fas fa-check-circle"></i>
-                    </div> 
-                </div>
-            </section>
+                    <div class="menustep">
+                        <div class="menu__choice">
+                            <h4>Farandole de desserts</h4>
+                            <p>Du chef</p>   
+                        </div>
+                        <div class="menu__price"><p>18€</p></div>
+                        <div class="check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>                          
+                    </div>
+                    <div class="menustep">
+                        <div class="menu__choice">
+                            <h4>Crème brulée</h4>
+                            <p>Revisitée</p>
+                        </div>
+                        <div class="menu__price"><p>22€</p></div>
+                        <div class="check">
+                        <i class="fas fa-check-circle"></i>
+                        </div>                          
+                    </div>                             
+                    <div class="menustep">
+                        <div class="menu__choice">
+                            <h4>Tiramisu</h4>
+                            <p>À la noisette</p>
+                        </div>
+                        <div class="menu__price"><p>23€</p></div>                              
+                        <div class="check">
+                        <i class="fas fa-check-circle"></i>
+                        </div> 
+                    </div>
+                </section>
+            </div>
+        </section>
         <section class="command"> 
             <a href="" class="colorbtn">Commander </a>
         </section>
-    </section>
     </main>
 
     <footer>
-<h2> ohmyfood</h2>
-<p>
-<i class="fas fa-utensils"></i>Proposer un restaurant <br/>
-<i class="fas fa-hands-helping"></i>Devenir partenaire <br/>
-Mentions légales <br/>
-<a href="#">Contact</a>
-</p>
+        <h2 class="name">ohmyfood</h2>
+        <p><i class="fas fa-utensils"></i><a href="#">Proposer un restaurant</a></p> 
+        <p><i class="fas fa-hands-helping"></i><a href="#">Devenir partenaire</a></p> 
+        <p><a href="#">Mentions légales</a></p> 
+        <p><a href="#">Contact</a></p>
     </footer>
 
 
